# rusty-bench

./: .gitignore  Cargo.toml  LICENSE  README.md  UBIQUITOUS_LANGUAGE.md  deny.toml  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/rb-canvas/: Cargo.toml
crates/rb-canvas/src/: color.rs  js.rs  lib.rs  pixel.rs  traits.rs
crates/rb-cli/: Cargo.toml
crates/rb-cli/examples/: ep_enum.rs
crates/rb-cli/src/: control.rs  decode.rs  info.rs  lib.rs  main.rs  record.rs  scan.rs  types.rs  util.rs
crates/rb-cli/tests/: control.rs  decode.rs  golden.rs  info.rs  record.rs  scan.rs
crates/rb-core/: Cargo.toml
crates/rb-core/src/: error.rs  handle.rs  lib.rs  registry.rs  runtime.rs  session.rs
crates/rb-core/tests/: native_acquisition.rs
crates/rb-decode/: Cargo.toml
crates/rb-decode/src/: annotation.rs  decoder.rs  i2c.rs  lib.rs  spi.rs  stack.rs  uart.rs
crates/rb-decode/tests/: golden_i2c.rs  golden_spi.rs  golden_uart.rs
crates/rb-device/: Cargo.toml
crates/rb-device/src/: acquisition.rs  capability.rs  device.rs  error.rs  identity.rs  lib.rs
crates/rb-drivers/: Cargo.toml
crates/rb-drivers/src/: demo.rs  fx2lafw.rs  lib.rs
crates/rb-gui/: Cargo.toml  Dioxus.toml  index.html  package-lock.json  package.json  playwright.config.js  tailwind.css
crates/rb-gui-native/: Cargo.toml
crates/rb-gui-native/src/: main.rs
crates/rb-gui-web/: Cargo.toml  index.html
crates/rb-gui-web/src/: main.rs
crates/rb-gui/firmware-fx2lafw/: ChangeLog  fx2lafw-braintechnology-usb-lps.fw  fx2lafw-cwav-usbeeax.fw  fx2lafw-cwav-usbeedx.fw  fx2lafw-cwav-usbeesx.fw  fx2lafw-cwav-usbeezx.fw  fx2lafw-cypress-fx2.fw  fx2lafw-hantek-6022be.fw  fx2lafw-hantek-6022bl.fw  fx2lafw-sainsmart-dds120.fw  fx2lafw-sigrok-fx2-16ch.fw  fx2lafw-sigrok-fx2-8ch.fw  fx2lafw-yixingdianzi-mdso.fw
crates/rb-gui/src/: app_state.rs  device_acquisition.rs  device_manager.rs  firmware.rs  lib.rs  main.rs  session_state.rs  settings.rs  state.rs  tab_content.rs  tab_state.rs  title_bar.rs  waveform_state.rs  waveform_view.rs
crates/rb-gui/src/components/: app.rs  canvas_toolbar.rs  channel_config.rs  control_cards.rs  decoder_config.rs  device_panel.rs  device_view.rs  dialog.rs  main_panel.rs  mod.rs  session_sidebar.rs  settings_dialog.rs  signal_list.rs  top_bar.rs  waveform_canvas.rs
crates/rb-gui/src/logic_analyzer/: acquisition.rs  control.rs  decoder.rs  mod.rs  view.rs
crates/rb-gui/src/logic_analyzer/components/: acquisition_setup.rs  canvas_toolbar.rs  channel_config.rs  decoder_config.rs  decoder_setup.rs  interactions.rs  mod.rs  waveform_canvas.rs
crates/rb-gui/src/logic_analyzer/components/waveform_view/: canvas_toolbar.rs  cursor_line.rs  marker_bar.rs  mod.rs  row_analog.rs  row_base.rs  row_decoder.rs  row_digital.rs  test_utils.rs  time_ruler.rs
crates/rb-gui/src/logic_analyzer/waveform_state/: marker.rs  mod.rs  row_layout.rs  viewport.rs
crates/rb-gui/tests/e2e/: smoke.spec.js
crates/rb-io/: Cargo.toml
crates/rb-io/src/: capture.rs  csv.rs  lib.rs  sr.rs  vcd.rs
crates/rb-model/: Cargo.toml
crates/rb-model/src/: analog.rs  channel.rs  chunk.rs  digital.rs  lib.rs  timebase.rs
crates/rb-model/tests/: aggregation_props.proptest-regressions  aggregation_props.rs
crates/rb-scpi/: Cargo.toml
crates/rb-scpi/src/: lib.rs
crates/rb-transport/: Cargo.toml
crates/rb-transport/src/: error.rs  factory.rs  lib.rs  mock.rs  nusb.rs  transport.rs
tests_gui/: conftest.py  test_smoke.py  test_tab_switch.py  test_waveform.py
