[package]
name = "rb-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
rb-model.workspace = true
rb-device.workspace = true
rb-transport.workspace = true
rb-decode.workspace = true
rb-drivers.workspace = true
thiserror.workspace = true
# `futures` (channels/streams/select) is the only runtime glue the *default*
# build needs; it is wasm-safe, so rb-core compiles to wasm32 with no features.
futures.workspace = true
futures-timer.workspace = true
log.workspace = true

# Optional, platform-specific spawners. Neither is enabled by default, so the
# default build stays pure and wasm-safe.
tokio = { workspace = true, optional = true, features = ["rt", "time"] }
wasm-bindgen-futures = { workspace = true, optional = true }

[features]
default = []
# Native acquisition spawner (current-thread tokio + `LocalSet` for the `?Send`
# device futures, interval-driven ticks).
native = ["dep:tokio"]
# Web acquisition spawner (`wasm-bindgen-futures::spawn_local`).
web = ["dep:wasm-bindgen-futures"]
# Forward the fx2lafw driver feature through the crate chain.
fx2lafw = ["rb-drivers/fx2lafw"]

[dev-dependencies]
async-trait.workspace = true
tokio = { workspace = true, features = ["rt", "time", "macros"] }

