[package]
name = "rb-decode"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
rb-model.workspace = true
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
