[package]
name = "rb-device"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# NOTE: rb-device must stay free of I/O and async-runtime dependencies.
# It must compile to wasm32-unknown-unknown with no feature flags.
[dependencies]
rb-model.workspace = true
