[package]
name = "rb-drivers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
rb-model.workspace = true
rb-device.workspace = true
rb-transport.workspace = true
rb-scpi.workspace = true
rb-decode.workspace = true

# Each driver lives in its own module behind a Cargo feature, e.g.
# [features]
# demo = []
# fx2lafw = ["rb-transport/usb"]
