[package]
name = "rb-drivers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
rb-model.workspace = true
rb-device.workspace = true
rb-transport.workspace = true
rb-scpi.workspace = true
rb-decode.workspace = true
async-trait.workspace = true
futures.workspace = true
futures-timer.workspace = true
log.workspace = true
nusb = { workspace = true, optional = true }

[dev-dependencies]

# Each driver lives in its own module behind a Cargo feature. The synthetic
# `demo` driver is on by default so the CLI/GUI always have a hardware-free device.
[features]
default = ["demo"]
demo = []
fx2lafw = ["dep:nusb", "rb-transport/usb"]
