[package]
name = "rb-gui-native"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "rusty-bench-gui"
path = "src/main.rs"

[dependencies]
rb-gui.workspace = true
eframe.workspace = true
