[package]
name = "rb-gui-native"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "rusty-bench-gui"
path = "src/main.rs"

[dependencies]
rb-gui = { workspace = true, features = ["native"] }
rb-drivers = { workspace = true, features = ["fx2lafw"] }
eframe.workspace = true
env_logger = "0.11"
