[package]
name = "rb-gui-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "rb-gui-web"
path = "src/main.rs"

[dependencies]
rb-gui = { workspace = true, features = ["web", "fx2lafw"] }
eframe.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Navigator",
    "Usb",
    "UsbAlternateInterface",
    "UsbConfiguration",
    "UsbConnectionEvent",
    "UsbControlTransferParameters",
    "UsbDevice",
    "UsbDeviceFilter",
    "UsbDeviceRequestOptions",
    "UsbDirection",
    "UsbInTransferResult",
    "UsbInterface",
    "UsbOutTransferResult",
    "UsbRecipient",
    "UsbRequestType",
    "UsbTransferStatus",
    "Window",
    "WorkerGlobalScope",
    "WorkerNavigator",
] }
