[package]
name = "rb-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
rb-core.workspace = true
rb-decode.workspace = true
rb-device.workspace = true
rb-model.workspace = true
eframe.workspace = true
futures.workspace = true

# Web spawner (wasm only).
wasm-bindgen-futures = { workspace = true, optional = true }
# Native spawner (non-wasm).
tokio = { workspace = true, optional = true, features = ["rt", "time"] }

[dev-dependencies]
rb-drivers = { workspace = true, features = ["fx2lafw"] }
rb-transport.workspace = true
async-trait.workspace = true

[features]
default = []
web = ["rb-core/web", "dep:wasm-bindgen-futures"]
native = ["rb-core/native", "dep:tokio"]
