[package]
name = "rb-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "rusty-bench-gui"
path = "src/main.rs"

[dependencies]
rb-core.workspace = true
rb-decode.workspace = true
rb-device.workspace = true
rb-drivers.workspace = true
rb-model.workspace = true
rb-transport.workspace = true
rb-canvas.workspace = true
async-trait.workspace = true
dioxus = { workspace = true, features = ["html"] }
dioxus-sdk-storage.workspace = true
serde.workspace = true
futures.workspace = true
log.workspace = true
nusb = { workspace = true, optional = true }

# Platform renderers: gated behind features, dx sets the right one automatically.
dioxus-desktop = { workspace = true, optional = true }
dioxus-web = { workspace = true, optional = true }

# Web spawner
wasm-bindgen-futures = { workspace = true, optional = true }
# Native spawner
tokio = { workspace = true, optional = true, features = ["rt", "rt-multi-thread", "time"] }
# Runtime-agnostic timer (native + WASM)
futures-timer.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
raw-window-handle = "0.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
console_log = "1"
getrandom = { version = "0.3", features = ["wasm_js"] }
web-sys = { workspace = true, features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "Navigator",
    "Usb",
    "UsbDeviceFilter",
    "UsbDeviceRequestOptions",
] }

[dev-dependencies]
rb-canvas = { workspace = true, features = ["png-export"] }
rb-drivers = { workspace = true, features = ["fx2lafw"] }
async-trait.workspace = true
tokio = { workspace = true, features = ["rt", "time"] }

[features]
default = ["desktop", "fx2lafw"]
desktop = [
    "rb-core/native",
    "dep:tokio",
    "dep:dioxus-desktop",
    "dep:nusb",
    "dioxus/desktop",
]
native = []
web = [
    "rb-core/web",
    "dep:wasm-bindgen-futures",
    "dep:dioxus-web",
    "dioxus/web",
]
fx2lafw = ["rb-core/fx2lafw"]
