[package]
name = "rb-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
rb-model.workspace = true
rb-device.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
zip.workspace = true
