[package]
name = "rb-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
rb-model.workspace = true
rb-device.workspace = true
async-trait.workspace = true
thiserror.workspace = true
nusb = { workspace = true, optional = true }

[dev-dependencies]
futures.workspace = true

[features]
# Native USB transport via nusb.
usb = ["dep:nusb"]
